fix(layout): adjust vertical spacing

--- a/src/assets/scss/config/_layout.scss
+++ b/src/assets/scss/config/_layout.scss
@@ -19,7 +19,7 @@ $grid-offset: (
 );
 
 // Base for vertical spacing
-$vertical-space: 22px;
+$vertical-space: 24px;
 
 // Default border radius
 $border-radius: 3px;
