--- a/src/assets/scss/organisms/_campaign-info.scss
+++ b/src/assets/scss/organisms/_campaign-info.scss
@@ -1,11 +1,11 @@
 .campaign-info {
   background-color: $clr-grey-dark;
+  padding-bottom: $vertical-space;
 }
 
 .campaign-info__content {
   overflow: hidden;
   color: $clr-white;
-  padding-bottom: 18px;
 }
 
 // RichText
