--- a/src/assets/scss/organisms/_messages-carousel.scss
+++ b/src/assets/scss/organisms/_messages-carousel.scss
@@ -7,8 +7,7 @@
   align-items: flex-start;
   justify-content: center;
   overflow: hidden;
-  padding-top: 26px;
-  padding-bottom: 26px;
+  padding: $vertical-space 0;
   opacity: 0;
   transition: opacity $trans-duration $trans-cubic;
   &.is-ready {
